# PVIC_IOTA_Fogbed

./: .dockerignore  .gitignore  AUTOMATIC_TRANSFERS_GUIDE.md  CHANGELOG.md  CHECKLIST_FINAL.md  COMO_USAR_V2.md  CORRECAO_FINAL_V2.md  DEBUG_REAL_PROBLEM.md  Dockerfile  Dockerfile.dev  Dockerfile.fogbed-env  Dockerfile.mock  FUNDING_ANALYSIS.md  FUNDING_SOLUTION.md  INDEX_CORRECAO.md  JORNADA_COMPLETA.md  NOVO_EXAMPLE_SUMARIO.md  QUICK_TEST.sh  QUICK_TEST_TRANSFER.py  README.md  README_FUNDING_FIX.md  RESUMO_CORRECAO_FINAL.md  SOLUCAO_FUNDING_REAL.md  SOLUCAO_TRANSFERENCIAS_AUTOMATICAS.md  TRANSFER_COMMAND_FIX.md  caça_yaml.py  debug_local.py  detetive.py  experiment.py  experiment_fogbed.py  iota_driver.py  iota_fogbed.py  mock_server.py  pyproject.toml  requirements-dev.txt  requirements-test.txt  requirements.txt  run_example04_corrected.sh  test_transaction_fix.py  test_transaction_fix_v2.py  (+2 more)
contracts/counter/: Move.toml
docker/: .dockerignore  Dockerfile  Dockerfile.local
docs/: AUTOMATIC_TRANSFERS_GUIDE.md  CHANGELOG.md  TECHNICAL_GUIDE.md
examples/: 01_basic_network.py  02_complete_network.py  03_smart_contract_full_workflow.py  04_auto_transfer_network.md  04_auto_transfer_network.py
fog-env/: pyvenv.cfg
fogbed-iota/: .gitignore  README.md  pyproject.toml
fogbed-iota/docker/: Dockerfile
fogbed-iota/examples/: 02_complete_network.py
fogbed-iota/fogbed_iota/client/: __init__.py  exceptions.py  rpc_client.py
fogbed-iota/fogbed_iota/models/: iota_node.py
fogbed-iota/fogbed_iota/utils/: __init__.py  docker.py
fogbed-iota/scripts/: clean.sh  install.sh  setup_dev.sh
fogbed-iota/tests/: conftest.py  test_models.py
fogbed-iota/tests/fixtures/: client_fixtures.py
fogbed-iota/tests/unit/: __init__.py  conftest.py  test_iota_client.py  test_models.py
fogbed_iota/: __init__.py  __version__.py  accounts.py  distributed_orchester.py  network.py  smart_contracts.py
scripts/: build_docker.sh  build_docker_with_move.sh  install_iota_host.sh  iota_fogbed_cli.py  run_client_tests.sh  run_tests.sh  safe_cleanup.sh  setup_production.sh  test_docker.sh
(+53 files in other folders)
