[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fogbed-iota"
version = "0.1.0"
description = "IOTA blockchain integration for Fogbed network emulator"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Paulo", email = "seu-email@exemplo.com"}
]
keywords = ["iota", "blockchain", "fogbed", "mininet", "network-emulation"]

dependencies = [
    "fogbed>=1.3.0",
    "docker>=6.0.0",
    "requests>=2.28.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["fogbed_iota*"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
